--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "prettier": "^1.7.4"
+    "prettier": "^1.8.2",
+    "xo": "^0.18.2"
   }
 }
