--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "codewars-katas",
+  "license": "MIT",
   "version": "1.0.0",
   "description": "All my CodeWars katas",
   "author": {
@@ -7,15 +8,14 @@
     "email": "lndgalante@gmail.com",
     "url": "https://leonardogalante.com"
   },
-  "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.4",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "xo": "^0.18.2",
     "jest": "^21.2.1",
-    "prettier": "^1.8.2",
-    "xo": "^0.18.2"
+    "prettier": "^1.8.2"
   },
   "scripts": {
     "test": "jest --watchAll",
