--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "scripts": {
     "test": "xo && jest --watchAll",
-    "test 8-kyu": "jest --watchAll /8-kyu",
-    "test 7-kyu": "jest --watchAll /7-kyu",
-    "test 6-kyu": "jest --watchAll /6-kyu",
-    "test 5-kyu": "jest --watchAll /5-kyu"
+    "test 8-kyu": "xo && jest --watchAll /8-kyu",
+    "test 7-kyu": "xo && jest --watchAll /7-kyu",
+    "test 6-kyu": "xo && jest --watchAll /6-kyu",
+    "test 5-kyu": "xo && jest --watchAll /5-kyu"
   },
   "xo": {
     "extends": ["prettier", "plugin:jest/recommended"],
