--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "codewars-katas",
   "license": "MIT",
-  "version": "1.0.0",
+  "name": "codewars-katas",
   "description": "All my CodeWars katas",
   "author": {
     "name": "Leonardo Galante",
@@ -16,15 +15,18 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-jest": "^21.5.0",
     "prettier": "^1.8.2",
+    "husky": "^0.14.3",
     "jest": "^22.0.4",
     "xo": "^0.18.2"
   },
   "scripts": {
-    "test": "xo && jest --watchAll",
-    "test 8-kyu": "xo && jest --watchAll /8-kyu",
-    "test 7-kyu": "xo && jest --watchAll /7-kyu",
-    "test 6-kyu": "xo && jest --watchAll /6-kyu",
-    "test 5-kyu": "xo && jest --watchAll /5-kyu"
+    "lint": "xo",
+    "test": "jest",
+    "test 8-kyu": "jest --watchAll /8-kyu",
+    "test 7-kyu": "jest --watchAll /7-kyu",
+    "test 6-kyu": "jest --watchAll /6-kyu",
+    "test 5-kyu": "jest --watchAll /5-kyu",
+    "precommit": "npm run lint && npm run test"
   },
   "xo": {
     "extends": ["prettier", "plugin:jest/recommended"],
