--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "ramda": "^0.25.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-jest": "^21.5.0",
-    "prettier": "^1.8.2",
-    "husky": "^0.14.3",
+    "xo": "^0.18.2",
     "jest": "^22.0.4",
-    "xo": "^0.18.2"
+    "husky": "^0.14.3",
+    "prettier": "^1.8.2",
+    "@types/jest": "^21.1.9",
+    "eslint-plugin-jest": "^21.5.0",
+    "eslint-config-prettier": "^2.9.0"
   },
   "scripts": {
     "lint": "xo",
