--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "xo": {
     "esnext": true,
     "extends": ["prettier", "plugin:jest/recommended"],
-    "ignores": ["./boilerplate.js", "./boilerplate.test.js"]
+    "ignores": ["boilerplate.js", "boilerplate.test.js"]
   },
   "jest": {
     "testPathIgnorePatterns": ["./boilerplate.js", "./boilerplate.test.js"]
