--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "xo": "^0.18.2",
     "jest": "^22.0.4",
     "husky": "^0.14.3",
-    "prettier": "^1.8.2",
-    "@types/jest": "^21.1.10",
+    "prettier": "^1.9.2",
+    "@types/jest": "^22.0.0",
     "eslint-plugin-jest": "^21.5.0",
     "eslint-config-prettier": "^2.9.0"
   },
@@ -30,6 +30,14 @@
     "esnext": true,
     "extends": ["prettier", "plugin:jest/recommended"],
     "ignores": ["boilerplate.js", "boilerplate.test.js"]
+  },
+  "prettier": {
+    "semi": false,
+    "tabWidth": 2,
+    "printWidth": 80,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "eslintIntegration": true
   },
   "jest": {
     "testPathIgnorePatterns": ["./boilerplate.js", "./boilerplate.test.js"]
