--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "url": "https://leonardogalante.com"
   },
   "dependencies": {
-    "ramda": "^0.25.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "ramda": "^0.25.0"
   },
   "devDependencies": {
-    "xo": "^0.18.2",
-    "jest": "^22.0.5",
-    "husky": "^0.14.3",
-    "prettier": "^1.10.2",
     "@types/jest": "^22.0.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-jest": "^21.6.1",
-    "eslint-config-prettier": "^2.9.0"
+    "husky": "^0.14.3",
+    "jest": "^22.0.5",
+    "prettier": "^1.10.2",
+    "xo": "^0.18.2"
   },
   "scripts": {
     "lint": "xo",
@@ -28,8 +28,14 @@
   },
   "xo": {
     "esnext": true,
-    "extends": ["prettier", "plugin:jest/recommended"],
-    "ignores": ["boilerplate.js", "boilerplate.test.js"]
+    "extends": [
+      "prettier",
+      "plugin:jest/recommended"
+    ],
+    "ignores": [
+      "boilerplate.js",
+      "boilerplate.test.js"
+    ]
   },
   "prettier": {
     "semi": false,
@@ -40,6 +46,9 @@
     "eslintIntegration": true
   },
   "jest": {
-    "testPathIgnorePatterns": ["./boilerplate.js", "./boilerplate.test.js"]
+    "testPathIgnorePatterns": [
+      "./boilerplate.js",
+      "./boilerplate.test.js"
+    ]
   }
 }
