--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "devDependencies": {
     "@types/jest": "^22.0.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-jest": "^21.6.1",
+    "eslint-plugin-jest": "^21.6.2",
     "husky": "^0.14.3",
-    "jest": "^22.0.5",
+    "jest": "^22.1.2",
     "prettier": "^1.10.2",
     "xo": "^0.18.2"
   },
@@ -28,14 +28,8 @@
   },
   "xo": {
     "esnext": true,
-    "extends": [
-      "prettier",
-      "plugin:jest/recommended"
-    ],
-    "ignores": [
-      "boilerplate.js",
-      "boilerplate.test.js"
-    ]
+    "extends": ["prettier", "plugin:jest/recommended"],
+    "ignores": ["boilerplate.js", "boilerplate.test.js"]
   },
   "prettier": {
     "semi": false,
@@ -46,9 +40,6 @@
     "eslintIntegration": true
   },
   "jest": {
-    "testPathIgnorePatterns": [
-      "./boilerplate.js",
-      "./boilerplate.test.js"
-    ]
+    "testPathIgnorePatterns": ["./boilerplate.js", "./boilerplate.test.js"]
   }
 }
