--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "ramda": "^0.25.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.4",
+    "@types/jest": "^23.3.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-jest": "^21.18.0",
     "husky": "^0.14.3",
-    "jest": "^23.3.0",
+    "jest": "^23.4.2",
     "jest-extended": "^0.7.2",
     "prettier": "^1.13.7",
     "xo": "0.21.1"
@@ -52,6 +52,7 @@
     ],
     "setupTestFrameworkScriptFile": "jest-extended",
     "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "collectCoverage": true,
+    "testEnvironment": "node"
   }
 }
