--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "lint": "xo",
     "test": "jest",
+    "create-kata": "./new.sh",
     "test-watch": "jest --watchAll",
     "precommit": "npm run lint && npm run test",
     "generate-index": "node ./utils/index-generator.js"
