--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "license": "MIT",
   "name": "codewars-katas",
-  "description": "Codewars katas repository",
+  "description": "Codewars katas ark",
   "author": {
     "name": "Leonardo Galante",
     "email": "lndgalante@gmail.com"
