--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
