--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
+    "@types/lodash": "^4.14.120",
+    "@types/moment": "^2.13.0",
+    "@types/ramda": "^0.25.47",
     "eslint-config-prettier": "^3.5.0",
     "eslint-plugin-jest": "^22.1.3",
     "husky": "^1.3.1",
