--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/moment": "^2.13.0",
-    "@types/ramda": "^0.27.3",
+    "@types/ramda": "^0.27.4",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.8.2",
     "husky": "^4.2.5",
-    "jest": "^25.4.0",
+    "jest": "^25.5.1",
     "jest-extended": "^0.11.5",
     "prettier": "^2.0.5",
-    "xo": "0.29.1"
+    "xo": "0.30.0"
   },
   "scripts": {
     "lint": "xo",
@@ -42,7 +42,8 @@
       "lib"
     ],
     "rules": {
-      "unicorn/prefer-number-properties": 0
+      "unicorn/prefer-number-properties": 0,
+      "unicorn/no-fn-reference-in-iterator": 0
     }
   },
   "jest": {
