--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       "lib"
     ],
     "rules": {
+      "padding-line-between-statements": 0,
       "unicorn/prefer-number-properties": 0,
       "unicorn/no-fn-reference-in-iterator": 0
     }
